<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyF9"
    tools:context=".presentation.home.HomeFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/app_toolbar"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:queryHint="@string/search_for_any_product"
        app:iconifiedByDefault="false"
        app:queryBackground="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/all_features"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:paddingVertical="@dimen/_4sdp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_4sdp"
        app:drawableEndCompat="@drawable/filter"
        android:drawablePadding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_4sdp"
        app:drawableEndCompat="@drawable/filter"
        android:drawablePadding="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />






</androidx.constraintlayout.widget.ConstraintLayout>