<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteF5"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".presentation.auth.login.LoginFragment">

    <TextView
        android:id="@+id/lbForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/montserrat_bold"
        android:lines="2"
        android:text="@string/forget_yr_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbForgetPassword"
        app:startIconDrawable="@drawable/mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_drawable"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/grey67"
            android:textColorHint="@color/grey67"
            android:textSize="@dimen/_10ssp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/lbForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:text="@string/forget_text"
        android:textColor="@color/grey67"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/btn_drawable"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@color/pinkF8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbForget" />


</androidx.constraintlayout.widget.ConstraintLayout>