<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unsplash"
    android:paddingHorizontal="@dimen/_42sdp"
    tools:context=".presentation.splash.GetStartedFragment">

    <TextView
        android:id="@+id/lbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/montserrat_bold"
        android:lines="3"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_14sdp"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lbFind"/>


    <TextView
        android:id="@+id/lbFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/find_here"
        android:textColor="@color/whiteF2"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_27sdp"
        android:background="@drawable/btn_drawable"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@color/pinkF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>